# mobilenetv2-esp32s3-cam

./: .gitignore  CMakeLists.txt  ESP32项目构建流程详解.md  README.md  sdkconfig  sdkconfig.defaults.esp32s3  快速开始.md
.claude/: settings.local.json
esp-dl/vision/classification/: binary_cls_category_name.hpp  binary_cls_postprocessor.cpp  binary_cls_postprocessor.hpp
imagenet_cls/: CMakeLists.txt  Kconfig  idf_component.yml  imagenet_cls.cpp  imagenet_cls.hpp
imagenet_cls/models/s3/: image_classifier_320x320_int8.espdl
main/: CMakeLists.txt  app_main.cpp  idf_component.yml
mobilenetv2_train/: QUANTIZATION_GUIDE.md  QUICK_START_QUANTIZATION.md  quantize_my_model.py  test.py  train_mobilenetv2.py
